--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <!-- CSS -->
   <link rel="stylesheet" href="/style/style.css">
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="/script/jquery.js"></script>
-  <script src="/script/popper.js"></script>
-  <script src="/script/boostrap.js"></script>
+  <script src="script/jquery.js"></script>
+  <script src="script/popper.js"></script>
+  <script src="script/boostrap.js"></script>
 </head>
 
 <body>
