--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="/style/boostrap.css">
+  <link rel="stylesheet" href="style/bootstrap.css">
   <!-- CSS -->
-  <link rel="stylesheet" href="/style/style.css">
+  <link rel="stylesheet" href="style/style.css">
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="script/jquery.js"></script>
   <script src="script/popper.js"></script>
