--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     <h5 class="my-0 mr-md-auto font-weight-normal">Website Name</h5>
     <nav class="navbar navbar-expand navbar-light">
       <div class="nav navbar-nav">
-        <a class="nav-item nav-link active" href="/index.html">Home</a>
-        <a class="nav-item nav-link" href="/about.html">About</a>
-        <a class="nav-item nav-link" href="/portfolio.html">Portfolio</a>
-        <a class="nav-item nav-link" href="/contact.html">Contact</a>
+        <a class="nav-item nav-link active" href="index.html">Home</a>
+        <a class="nav-item nav-link" href="about.html">About</a>
+        <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
+        <a class="nav-item nav-link" href="contact.html">Contact</a>
       </div>
     </nav>
   </div>
