--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="style/boostrap.css">
+    <link rel="stylesheet" href="style/bootstrap.css">
     <!-- CSS -->
     <link rel="stylesheet" href="style/style.css">
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
